--- a/less/content.less
+++ b/less/content.less
@@ -195,10 +195,6 @@
 				&.views-field-field-short-form,
 				&.views-field-webform-form-body {
 					padding-left: 0;
-
-					.form-item {
-						margin-bottom: 10px;
-					}
 				}
 
 				&.views-field-field-date-text,
@@ -373,6 +369,14 @@
 			float: right;
 			margin-left: 10px;
 		}
+	}
+}
+
+.webform-component {
+	margin-bottom: 10px;
+
+	input.email {
+		.form-control;
 	}
 }
 
