--- a/less/content.less
+++ b/less/content.less
@@ -372,9 +372,12 @@
 	}
 }
 
-.form-item {
+.form-item,
+.mollom-privacy {
 	margin-bottom: 10px;
+}
 
+.webform-component {
 	input.email {
 		.form-control;
 	}
