--- a/less/content.less
+++ b/less/content.less
@@ -153,6 +153,16 @@
 					padding-left: 0; // Undoing the 35px padding-left inside fields
 				}
 			}
+
+			.link-button {
+				.badge;
+
+				background-color: @cbf-sidebar-blue;
+
+				a {
+					color: white;
+				}
+			}
 		}
 	}
 
