--- a/less/content.less
+++ b/less/content.less
@@ -158,6 +158,8 @@
 				.badge;
 
 				background-color: @cbf-sidebar-blue;
+				font-size: @font-size-base;
+				padding: 6px 12px;				
 
 				a {
 					color: white;
