--- a/less/header.less
+++ b/less/header.less
@@ -141,7 +141,8 @@
 						@media @wide {
 							top: 15%;
 							left: 50%;
-							padding: 0 10% 30px;
+							right: 10%;
+							padding: 0 0 30px 10%;
 						}
 					}
 				}
