Raise z-index of carousel left and right buttons so they are not obscured by the carousel caption, and the user can click on them

--- a/css/style.css
+++ b/css/style.css
@@ -6741,6 +6741,7 @@ table .checkbox input[type="checkbox"] {
 }
 #page-header .region-header .carousel .carousel-control {
   font-size: 80px;
+  z-index: 12;
   width: 20%;
   padding: 25% 0;
 }
