Improve display of next/prev controls. The right-hand one was being hidden by the carousel caption.

--- a/less/header.less
+++ b/less/header.less
@@ -84,8 +84,8 @@
 					left: 0;
 					width: 100%;
 				@media @tablet {
-					left: 70%;
-					width: 30%;
+					left: 60%;
+					width: 40%;
 				}
 				@media @wide {
 					left: 50%;
@@ -112,7 +112,7 @@
 								width: 100%;
 								margin-bottom: 180px;
 							@media @tablet {
-								width: 70%;
+								width: 60%;
 								margin-bottom: 0;
 							}
 							@media @wide {
@@ -135,8 +135,8 @@
 							height: auto;
 							bottom: 0;
 							top: 5%;
-							left: 70%;
-							padding: 0 10px 30px;
+							left: 60%;
+							padding: 0 10% 30px 5%;
 						}
 						@media @wide {
 							top: 15%;
@@ -150,18 +150,18 @@
 
 			.carousel-control {
 				font-size: 80px;
-				z-index: 12;
 
 				// Mobile:
-					width: 20%;
-					padding: 25% 0;
-				@media @tablet {
 					width: 15%;
-					padding: 8% 0;
+					padding: 10% 0;
+				@media @tablet {
+					width: 10%;
+					padding: 5% 0;
+					z-index: 12;
 				}
 				@media @normal {
-					width: 20%;
-					padding: 10% 0;
+					width: 10%;
+					padding: 8% 0;
 				}
 				@media @wide {
 					width: 10%;
