--- a/less/content.less
+++ b/less/content.less
@@ -364,6 +364,40 @@
 			}
 		}
 
+		.field-name-field-content {
+			.jp-audio {
+				width: 100%;
+
+				.jp-interface {
+					// Mobile:
+						height: 110px;
+					@media screen and (min-width: 400px) {
+						height: 80px;
+					}
+				}
+
+				.jp-mute, .jp-unmute {
+					// Mobile:
+						left: 32px;
+						top: 73px;
+					@media screen and (min-width: 400px) {
+						left: 296px;
+						top: 32px;
+					}
+				}
+
+				.jp-volume-bar {
+					// Mobile:
+						left: 58px;
+						top: 78px;
+					@media screen and (min-width: 400px) {
+						left: 324px;
+						top: 37px;
+					}
+				}
+			}
+		}
+
 		.video-filter {
 			width: 400px;
 			height: 225px;
