--- a/less/content.less
+++ b/less/content.less
@@ -118,6 +118,10 @@
 			}
 		}
 	}
+
+	.block-search .block-panel {
+		margin-bottom: 25px;
+	}
 }
 
 .content-region, .sidebar-1-region, .sidebar-2-region {
