--- a/css/style.css
+++ b/css/style.css
@@ -6638,7 +6638,7 @@ table .checkbox input[type="checkbox"] {
   background-color: inherit;
 }
 #navbar .navbar-collapse .navbar-nav .leaf a {
-  padding: 20px 10px;
+  padding: 10px;
 }
 @media screen and (min-width: 768px) {
   #navbar .navbar-collapse .navbar-nav .leaf a {
@@ -6656,6 +6656,21 @@ table .checkbox input[type="checkbox"] {
     font-size: 22px;
     padding-top: 30px;
   }
+}
+#navbar .navbar-collapse .region-navigation {
+  float: right;
+}
+@media screen and (min-width: 768px) {
+  #navbar .navbar-collapse .region-navigation .block-search .block-panel {
+    margin-top: 10px;
+    margin-right: -15px;
+  }
+}
+#navbar .navbar-collapse .region-navigation .block-search .block-panel .form-control {
+  color: #999999;
+}
+#navbar .navbar-collapse .region-navigation .block-search .block-panel .btn {
+  color: #777777;
 }
 .city-adelaide .menu-adelaide,
 .city-brisbane .menu-brisbane,
