--- a/less/header.less
+++ b/less/header.less
@@ -38,7 +38,7 @@
 
 			.leaf {
 				a {
-					padding: 20px 10px;
+					padding: 10px;
 
 					@media @tablet {
 						padding-top: 24px;
@@ -51,6 +51,25 @@
 						font-size: @font-size-h1;
 						padding-top: 30px;
 					}
+				}
+			}
+		}
+
+		.region-navigation {
+			float: right;
+
+			.block-search .block-panel {
+				@media @tablet {
+					margin-top: 10px;
+					margin-right: -15px;
+				}
+
+				.form-control {
+					color: @gray-light;
+				}
+
+				.btn {
+					color: @navbar-default-link-color;
 				}
 			}
 		}
