--- a/css/style.css
+++ b/css/style.css
@@ -6586,23 +6586,56 @@ table .checkbox input[type="checkbox"] {
   }
 }
 #navbar .navbar-header .logo {
+  display: inline-block;
+  /* http://soqr.fr/testsvg/embed-svg-liquid-layout-responsive-web-design.php */
+
+  position: relative;
   width: 85%;
   max-width: 360px;
+  padding-bottom: 20.4%;
+  /* 240px / 1000px * 85% */
+
+}
+@media screen and (min-width: 460px) {
+  #navbar .navbar-header .logo {
+    padding-bottom: 86px;
+    /* 240px / 1000px * 360px */
+  
+  }
 }
 @media screen and (min-width: 768px) {
   #navbar .navbar-header .logo {
     width: 100%;
+    padding-bottom: 24%;
+    /* 240px / 1000px * 100% */
+  
   }
 }
 @media screen and (min-width: 992px) {
   #navbar .navbar-header .logo {
     width: 85%;
+    padding-bottom: 20.4%;
+    /* 240px / 1000px * 85% */
+  
   }
 }
 @media screen and (min-width: 1200px) {
   #navbar .navbar-header .logo {
     width: 80%;
+    padding-bottom: 19.2%;
+    /* 240px / 1000px * 80% */
+  
   }
+}
+#navbar .navbar-header .logo object {
+  display: block;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  /* http://stackoverflow.com/questions/11374059/make-an-html-svg-object-also-a-clickable-link */
+
 }
 #navbar .navbar-header .logo img {
   display: block;
