--- a/less/header.less
+++ b/less/header.less
@@ -7,16 +7,34 @@
 
 		.logo {
 			// Mobile:
+				display: inline-block;	/* http://soqr.fr/testsvg/embed-svg-liquid-layout-responsive-web-design.php */
+				position: relative;
 				width: 85%;
 				max-width: 360px;
+				padding-bottom: 20.4%;	/* 240px / 1000px * 85% */
+			@media screen and (min-width: 460px) {
+				padding-bottom: 86px;	/* 240px / 1000px * 360px */
+			}
 			@media @tablet {
 				width: 100%;
+				padding-bottom: 24%;	/* 240px / 1000px * 100% */
 			}
 			@media @normal {
 				width: 85%;
+				padding-bottom: 20.4%;	/* 240px / 1000px * 85% */
 			}
 			@media @wide {
 				width: 80%;
+				padding-bottom: 19.2%;	/* 240px / 1000px * 80% */
+			}
+			
+			object {
+				display: block;
+				position: absolute;
+				width: 100%;
+				top: 0;
+				left: 0;
+				pointer-events: none; /* http://stackoverflow.com/questions/11374059/make-an-html-svg-object-also-a-clickable-link */
 			}
 			
 			img {
