--- a/less/content.less
+++ b/less/content.less
@@ -150,11 +150,13 @@
 			}
 
 			h3 {
-				padding-left: 25px;
-
 				i {
+					float: left;
 					width: 35px;
-					margin-left: -35px;
+				}
+
+				i + .title-text {
+			 		margin-left: 35px;
 				}
 			}
 
