--- a/less/footer.less
+++ b/less/footer.less
@@ -62,16 +62,22 @@
 						color: #3B5998;
 					}
 					&.twitter-icon {
-						color: #0099CC;
+						color: #55ABED;
 					}
 					&.youtube-icon {
-						color: #CC181E;
+						color: #BB0000;
 					}
 					&.vimeo-icon {
-						color: #1ab7ea;
+						color: #1AB7EA;
 					}
 					&.googleplus-icon {
 						color: #DD4B39;
+					}
+					&.linkedin-icon {
+						color: #007BB6;
+					}
+					&.instagram-icon {
+						color: #404042;
 					}
 				}
 			}
