--- a/less/content.less
+++ b/less/content.less
@@ -346,6 +346,7 @@
 		.field-name-field-series-image {
 			position: relative;
 			float: right;
+			clear: right;
 			width: 50%;
 			padding-left:  @grid-gutter-width;
 			margin-right: ( ( @grid-gutter-width / 2 ) - 10px );
@@ -364,7 +365,8 @@
 		.field-name-field-attachment,
 		.field-name-body,
 		.field-name-field-content,
-		.field-name-field-video {
+		.field-name-field-video,
+		.field-name-field-civievent {
 			margin-bottom: 15px;
 		}
 
