--- a/less/content.less
+++ b/less/content.less
@@ -404,6 +404,8 @@
 		.field-name-field-content {
 			.jp-audio {
 				width: 100%;
+				clear: both;
+				margin-top: 15px;
 
 				.jp-interface {
 					// Mobile:
@@ -457,6 +459,22 @@
 		.user-picture {
 			float: right;
 			margin-left: 10px;
+		}
+	}
+
+	.links {
+		padding: 10px;
+
+		.comment-add {
+			.badge;
+
+			font-size: @font-size-h1;
+			background-color: @cbf-light-blue;
+			padding: 5px 30px;
+
+			a {
+				color: white;
+			}
 		}
 	}
 }
